--- a/itemtrade-project/src/css/App.css
+++ b/itemtrade-project/src/css/App.css
@@ -5,6 +5,7 @@
 
 :root{
     --bg-gray:#F5F5F5;
+    --boxshadow: rgba(0, 10, 18, 0.12) 0px 2px 4px, rgba(246, 246, 246, 0.5) 0px 0px 1px;
 }
 
 input{
