--- a/itemtrade-project/src/css/Catagory.css
+++ b/itemtrade-project/src/css/Catagory.css
@@ -1,3 +1,64 @@
-.catagory_couresel{
+/*------------------- Catagory------------------ */
+
+.couresel {
     display: flex;
+}
+
+
+/* ------------------- Catagory Most Searched ------------------ */
+
+.catagory_most_searched{
+    cursor: pointer;
+    width: 16.6rem;
+    height: 15rem;
+    display: flex;
+    flex-direction: column;
+    box-shadow: var(--boxshadow);
+    border-radius: 10%;
+    margin-bottom: 16px;
+    margin-left: 20px;
+}    
+
+.catagory_most_searched_body{
+    display: flex;
+    width: 16.6rem;
+    height: 12.6rem;
+    background-color: #F5F5F5;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+    align-items: center;
+}
+
+.catagory_most_searched_body > img{ 
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+.title{
+    text-align: center;
+    margin-top: 2.3%;
+    background-color: rgb(255, 255, 255);
+    color: rgb(66, 66, 66);
+    border-bottom-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+/* ------------------- Catagory Item ------------------ */
+
+.catagory_item_icon {
+    color: #F5F5F5;
+    margin-left: 40%;
+    margin-top: 45%;
+}
+
+.catagory_item_body {
+    border-radius: 16%;
+}
+
+.catagory_item_title {
+    text-align: center;
+}
+
+.catagory_item {
+    margin-left: 20px;
 }
