--- a/itemtrade-project/src/css/nav.css
+++ b/itemtrade-project/src/css/nav.css
@@ -1,18 +1,19 @@
 
-a {
-    text-decoration: none;
-    margin-left: 15px;
-    margin-right: auto;
-    color: black;
-    font-size: x-large;
-}
-
 
 .nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     position: sticky;
+    box-shadow: var(--boxshadow);
+}
+
+.nav > a {
+    text-decoration: none;
+    margin-left: 15px;
+    margin-right: auto;
+    color: black;
+    font-size: x-large;
 }
 
 .nav_buttons{
